<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controls</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settaggi</string>
    <string name="off">OFF</string>
	<string name="on">ON</string>
	<string name="toggle"></string>
	<string name="lbl1">K1</string>
	<string name="lbl2">K2</string>
	<string name="lbl3">K3</string>
	<string name="lbl4">K4</string>
</resources>
