<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.controls.MainActivity" >

    <ToggleButton
        android:id="@+id/toggleButton04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:checked="false"
        android:text="@string/toggle" />

    <ToggleButton
        android:id="@+id/toggleButton03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toggleButton04"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/toggle"/>

    <ToggleButton
        android:id="@+id/toggleButton01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toggleButton03"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:maxWidth="4dp"
        android:text="@string/toggle" />

    <ToggleButton
        android:id="@+id/toggleButton02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/toggleButton01"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="23dp"
        android:height="40dp"
        android:maxWidth="40dp"
        android:text="@string/toggle" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton04"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/toggleButton04"
        android:text="@string/lbl1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton04"
        android:layout_alignRight="@+id/toggleButton04"
        android:layout_below="@+id/toggleButton04"
        android:text="@string/lbl2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton03"
        android:layout_alignRight="@+id/toggleButton03"
        android:layout_below="@+id/toggleButton03"
        android:text="@string/lbl3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleButton02"
        android:layout_alignRight="@+id/toggleButton02"
        android:layout_below="@+id/toggleButton01"
        android:text="@string/lbl4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>